port: doesn't work but almost there